// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > renders the pagination component with correct number of pages with ellipsis 1`] = `
<nav
  class="ds-inline-flex ds-list-none ds-items-center ds-justify-center ds-gap-3"
  data-part="root"
  data-scope="pagination"
  dir="ltr"
  id="pagination::r1:"
>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined disabled:ds-text-inactive-gray disabled:ds-cursor-not-allowed"
    disabled=""
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      First Page
    </span>
    <span
      aria-hidden="true"
    >
      first_page
    </span>
  </button>
  <button
    aria-label="Previous"
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined disabled:ds-text-inactive-gray disabled:ds-cursor-not-allowed"
    data-disabled=""
    data-part="prev-trigger"
    data-scope="pagination"
    dir="ltr"
    disabled=""
    id="pagination::r1::prev"
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      Previous
    </span>
    <span
      aria-hidden="true"
    >
      chevron_left
    </span>
  </button>
  <button
    aria-current="page"
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-bg-accent ds-text-white ds-font-bold"
    data-index="1"
    data-part="item"
    data-scope="pagination"
    data-selected=""
    dir="ltr"
    id="pagination::r1::item:1"
    type="button"
  >
    1
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="2"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:2"
    type="button"
  >
    2
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="3"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:3"
    type="button"
  >
    3
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="4"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:4"
    type="button"
  >
    4
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="5"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:5"
    type="button"
  >
    5
  </button>
  <div
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined"
    data-part="ellipsis"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::ellipsis:5"
  >
    <span
      aria-hidden="true"
    >
      more_horiz
    </span>
  </div>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="10"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:10"
    type="button"
  >
    10
  </button>
  <button
    aria-label="Next"
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined"
    data-part="next-trigger"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::next"
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      Next
    </span>
    <span
      aria-hidden="true"
    >
      chevron_right
    </span>
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined"
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      Last Page
    </span>
    <span
      aria-hidden="true"
    >
      last_page
    </span>
  </button>
</nav>
`;

exports[`Pagination > renders the pagination component with correct number of pages without ellipsis 1`] = `
<nav
  class="ds-inline-flex ds-list-none ds-items-center ds-justify-center ds-gap-3"
  data-part="root"
  data-scope="pagination"
  dir="ltr"
  id="pagination::r0:"
>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined disabled:ds-text-inactive-gray disabled:ds-cursor-not-allowed"
    disabled=""
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      First Page
    </span>
    <span
      aria-hidden="true"
    >
      first_page
    </span>
  </button>
  <button
    aria-label="Previous"
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined disabled:ds-text-inactive-gray disabled:ds-cursor-not-allowed"
    data-disabled=""
    data-part="prev-trigger"
    data-scope="pagination"
    dir="ltr"
    disabled=""
    id="pagination::r0::prev"
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      Previous
    </span>
    <span
      aria-hidden="true"
    >
      chevron_left
    </span>
  </button>
  <button
    aria-current="page"
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-bg-accent ds-text-white ds-font-bold"
    data-index="1"
    data-part="item"
    data-scope="pagination"
    data-selected=""
    dir="ltr"
    id="pagination::r0::item:1"
    type="button"
  >
    1
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="2"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::item:2"
    type="button"
  >
    2
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="3"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::item:3"
    type="button"
  >
    3
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black ds-font-bold"
    data-index="4"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::item:4"
    type="button"
  >
    4
  </button>
  <button
    aria-label="Next"
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined"
    data-part="next-trigger"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::next"
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      Next
    </span>
    <span
      aria-hidden="true"
    >
      chevron_right
    </span>
  </button>
  <button
    class="ds-min-w-7 ds-min-h-7 ds-p-2 ds-rounded-full ds-bg-bg-gray-2 ds-text-black material-symbols-outlined"
    type="button"
  >
    <span
      class="ds-sr-only"
    >
      Last Page
    </span>
    <span
      aria-hidden="true"
    >
      last_page
    </span>
  </button>
</nav>
`;
